--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
 
 
-    "start": "node chatApp.js",
+    "start": "node app.js",
 
 
     "start-server": "nodemon routingreq.js"
