--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "description": "Complete Node.js Guide",
 
 
-  "main": "first-app.js",
+  "main": "app.js",
 
 
   "scripts": {
@@ -19,7 +19,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
 
 
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    
+    "start-server": "node app.js"
 
 
   },
@@ -49,7 +51,7 @@
     "ejs": "^3.1.7",
 
 
-    "express": "^4.17.3",
+    "express": "^4.18.0",
 
 
     "express-handlebars": "^6.0.5",
@@ -61,7 +63,7 @@
     "pug": "^3.0.2"
 
 
-  }
+  },
 
 
 }
