--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.0",
     "express-handlebars": "^6.0.5",
     "form-data": "^4.0.0",
+    "mysql2": "^2.3.3",
     "pug": "^3.0.2"
   }
 }
