--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-handlebars": "^6.0.5",
     "form-data": "^4.0.0",
     "mysql2": "^2.3.3",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sequelize": "^6.19.0"
   }
 }
