--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.7",
     "express": "^4.18.0",
     "express-handlebars": "^6.0.5",
